--- a/configuration/experiment_runs.yml
+++ b/configuration/experiment_runs.yml
@@ -1588,3 +1588,170 @@
     embedding_dropout: *id222
     optimizer_fn: *id223
     scheduler_fn: *id224
+- dataset: heloc
+  model: xgb
+  best_params: {}
+  param_grid:
+    outer_params: *id106
+    n_estimators: *id107
+    max_bin: *id108
+    tree_method: *id109
+    max_depth: *id110
+    learning_rate: *id111
+    subsample: *id112
+    colsample_bytree: *id113
+    min_child_weight: *id114
+    alpha: *id115
+    gamma: *id116
+    lambda: *id117
+- dataset: heloc
+  model: mlp
+  best_params: {}
+  param_grid:
+    outer_params: *id118
+    hidden_layer_sizes: *id119
+    activation: *id120
+    solver: *id121
+    alpha: *id122
+    learning_rate_init: *id123
+    beta_1: *id124
+    beta_2: *id125
+    batch_size: *id126
+- dataset: heloc
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params: *id127
+    learning_rate: *id128
+    batch_size: *id129
+    scheduler_factor: *id130
+    scheduler_patience: *id131
+- dataset: heloc
+  model: s1dcnn
+  best_params: {}
+  param_grid:
+    outer_params: *id132
+    batch_size: *id133
+    early_stopping_patience: *id134
+    learning_rate: *id135
+    hidden_size: *id136
+    scheduler_factor: *id137
+    scheduler_patience: *id138
+- dataset: heloc
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: *id139
+    learning_rate: *id140
+    virtual_batch_size_ratio: *id141
+    batch_size: *id142
+    weights: *id143
+    mask_type: *id144
+    n_d: *id145
+    n_steps: *id146
+    gamma: *id147
+    n_independent: *id148
+    n_shared: *id149
+    optimizer_fn: *id150
+    scheduler_fn: *id151
+- dataset: heloc
+  model: gate
+  best_params: {}
+  param_grid:
+    outer_params: *id152
+    learning_rate: *id153
+    batch_size: *id154
+    tree_depth: *id155
+    num_trees: *id156
+    chain_trees: *id157
+    gflu_stages: *id158
+    optimizer_fn: *id159
+    scheduler_fn: *id160
+- dataset: heloc
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id161
+    learning_rate: *id162
+    batch_size: *id163
+    embedding_initialization: *id164
+    shared_embedding_fraction: *id165
+    num_attn_blocks: *id166
+    attn_dropout: *id167
+    add_norm_dropout: *id168
+    ff_dropout: *id169
+    ff_hidden_multiplier: *id170
+    transformer_activation: *id171
+    embedding_dropout: *id172
+    optimizer_fn: *id173
+    scheduler_fn: *id174
+- dataset: heloc
+  model: categoryembedding
+  best_params: {}
+  param_grid:
+    outer_params: *id175
+    batch_size: *id176
+    learning_rate: *id177
+    layers: *id178
+    activation: *id179
+    initialization: *id180
+    dropout: *id181
+    optimizer_fn: *id182
+    scheduler_fn: *id183
+- dataset: heloc
+  model: gandalf
+  best_params: {}
+  param_grid:
+    outer_params: *id184
+    learning_rate: *id185
+    batch_size: *id186
+    gflu_stages: *id187
+    gflu_dropout: *id188
+    embedding_dropout: *id189
+    optimizer_fn: *id190
+    scheduler_fn: *id191
+- dataset: heloc
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id192
+    learning_rate: *id193
+    batch_size: *id194
+    num_layers: *id195
+    num_trees: *id196
+    additional_tree_output_dim: *id197
+    depth: *id198
+    choice_function: *id199
+    bin_function: *id200
+    input_dropout: *id201
+    embed_categorical: *id202
+    optimizer_fn: *id203
+    scheduler_fn: *id204
+- dataset: heloc
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id205
+    batch_size: *id206
+    learning_rate: *id207
+    optimizer_fn: *id208
+    scheduler_fn: *id209
+- dataset: heloc
+  model: tabtransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id210
+    batch_size: *id211
+    learning_rate: *id212
+    embedding_bias: *id213
+    embedding_initialization: *id214
+    shared_embedding_fraction: *id215
+    num_attn_blocks: *id216
+    attn_dropout: *id217
+    add_norm_dropout: *id218
+    ff_dropout: *id219
+    ff_hidden_multiplier: *id220
+    transformer_activation: *id221
+    embedding_dropout: *id222
+    optimizer_fn: *id223
+    scheduler_fn: *id224
