--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 docker-pycreds==0.4.0
 einops==0.6.1
+entmax==1.1
 exceptiongroup==1.1.2
 executing==1.2.0
 fastjsonschema==2.18.0
@@ -117,12 +118,13 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytorch-lightning==1.9.5
 pytorch-tabnet==4.0
-pytorch-tabular==1.0.2
+pytorch-tabular @ file:///Users/mdicio/Documents/GitHub/pytorch_tabular
 pytz==2023.3
 PyYAML==6.0.1
 pyzmq==25.1.0
 qtconsole==5.4.3
 QtPy==2.3.1
+-e git+https://github.com/BoomHSB/WTabRun.git@7abd173b7cbc15f2d32c5c818113a0b5ebb15020#egg=RealWTab
 referencing==0.30.2
 requests==2.31.0
 requests-oauthlib==1.3.1
