remove random bin fix dataloader paths

--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -20,11 +20,11 @@ include_models:
 # List of datasets to include in the experiment
 include_datasets:
   #- creditcard  # Credit card fraud dataset
-  #- iris        # Iris flower dataset
-  #- titanic
+  - iris        # Iris flower dataset
+  - titanic
   #- bufix
   #- breastcancer 
-  - housing
+  #- housing
   #- ageconditions
   #- adult
   #- heloc
