resnet debugging predictions to device

--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -24,7 +24,7 @@ include_datasets:
   - titanic
   #- bufix
   #- breastcancer 
-  - housing
+  #- housing
   #- ageconditions
   #- adult
   #- heloc
