--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -8,7 +8,7 @@ include_models:
   #- TabNet  # TabNet Classifier 
   #- GATE 
   - resnet18
-  #- S1DCNN
+  - S1DCNN
   #- CategoryEmbedding
   #- FTTransformer
   #- GANDALF
@@ -24,7 +24,7 @@ include_datasets:
   - titanic
   #- bufix
   #- breastcancer 
-  #- housing
+  - housing
   #- ageconditions
   #- adult
   #- heloc
