--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -2,13 +2,13 @@ random_state: 4200
 retrain: True
 # List of models to include in the experiment
 include_models:
-  #- XGB  # Extreme Gradient Boosting
-  #- CatBoost
+  - XGB  # Extreme Gradient Boosting
+  - CatBoost
   #- MLP  # Multi-Layer Perceptron
   #- TabNet  # TabNet Classifier 
   #- GATE 
-  - resnet18
-  - S1DCNN
+  #- resnet18
+  #- S1DCNN
   #- CategoryEmbedding
   #- FTTransformer
   #- GANDALF
@@ -19,16 +19,16 @@ include_models:
 
 # List of datasets to include in the experiment
 include_datasets:
-  #- creditcard  # Credit card fraud dataset
+  - creditcard  # Credit card fraud dataset
   - iris        # Iris flower dataset
   - titanic
-  #- bufix
-  #- breastcancer 
+  - bufix
+  - breastcancer 
   - housing
-  #- ageconditions
-  #- adult
-  #- heloc
-  #- covertype
+  - ageconditions
+  - adult
+  - heloc
+  - covertype
 
 model_configs:
 
