--- a/configuration/experiment_runs.yml
+++ b/configuration/experiment_runs.yml
@@ -2025,3 +2025,181 @@
     l2_leaf_reg: *id237
     min_child_samples: *id238
     bagging_temperature: *id239
+- dataset: creditcard
+  model: xgb
+  best_params: {}
+  param_grid:
+    outer_params: *id114
+    n_estimators: *id115
+    max_bin: *id116
+    tree_method: *id117
+    max_depth: *id118
+    learning_rate: *id119
+    subsample: *id120
+    colsample_bytree: *id121
+    min_child_weight: *id122
+    alpha: *id123
+    gamma: *id124
+    lambda: *id125
+- dataset: creditcard
+  model: mlp
+  best_params: {}
+  param_grid:
+    outer_params: *id126
+    hidden_layer_sizes: *id127
+    activation: *id128
+    solver: *id129
+    alpha: *id130
+    learning_rate_init: *id131
+    beta_1: *id132
+    beta_2: *id133
+    batch_size: *id134
+- dataset: creditcard
+  model: resnet18
+  best_params: {}
+  param_grid:
+    outer_params: *id135
+    learning_rate: *id136
+    batch_size: *id137
+    scheduler_factor: *id138
+    scheduler_patience: *id139
+- dataset: creditcard
+  model: s1dcnn
+  best_params: {}
+  param_grid:
+    outer_params: *id140
+    batch_size: *id141
+    learning_rate: *id142
+    hidden_size: *id143
+    scheduler_factor: *id144
+    scheduler_patience: *id145
+- dataset: creditcard
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: *id146
+    learning_rate: *id147
+    virtual_batch_size_ratio: *id148
+    batch_size: *id149
+    weights: *id150
+    mask_type: *id151
+    n_d: *id152
+    n_steps: *id153
+    gamma: *id154
+    n_independent: *id155
+    n_shared: *id156
+    optimizer_fn: *id157
+    scheduler_fn: *id158
+- dataset: creditcard
+  model: gate
+  best_params: {}
+  param_grid:
+    outer_params: *id159
+    learning_rate: *id160
+    batch_size: *id161
+    tree_depth: *id162
+    num_trees: *id163
+    chain_trees: *id164
+    gflu_stages: *id165
+    optimizer_fn: *id166
+    scheduler_fn: *id167
+- dataset: creditcard
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id168
+    learning_rate: *id169
+    batch_size: *id170
+    embedding_initialization: *id171
+    shared_embedding_fraction: *id172
+    num_attn_blocks: *id173
+    attn_dropout: *id174
+    add_norm_dropout: *id175
+    ff_dropout: *id176
+    ff_hidden_multiplier: *id177
+    transformer_activation: *id178
+    embedding_dropout: *id179
+    optimizer_fn: *id180
+    scheduler_fn: *id181
+- dataset: creditcard
+  model: categoryembedding
+  best_params: {}
+  param_grid:
+    outer_params: *id182
+    batch_size: *id183
+    learning_rate: *id184
+    layers: *id185
+    activation: *id186
+    initialization: *id187
+    dropout: *id188
+    optimizer_fn: *id189
+    scheduler_fn: *id190
+- dataset: creditcard
+  model: gandalf
+  best_params: {}
+  param_grid:
+    outer_params: *id191
+    learning_rate: *id192
+    batch_size: *id193
+    gflu_stages: *id194
+    gflu_dropout: *id195
+    embedding_dropout: *id196
+    optimizer_fn: *id197
+    scheduler_fn: *id198
+- dataset: creditcard
+  model: node
+  best_params: {}
+  param_grid:
+    outer_params: *id199
+    learning_rate: *id200
+    batch_size: *id201
+    num_layers: *id202
+    num_trees: *id203
+    additional_tree_output_dim: *id204
+    depth: *id205
+    choice_function: *id206
+    bin_function: *id207
+    input_dropout: *id208
+    embed_categorical: *id209
+    optimizer_fn: *id210
+    scheduler_fn: *id211
+- dataset: creditcard
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id212
+    batch_size: *id213
+    learning_rate: *id214
+    optimizer_fn: *id215
+    scheduler_fn: *id216
+- dataset: creditcard
+  model: tabtransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id217
+    batch_size: *id218
+    learning_rate: *id219
+    embedding_bias: *id220
+    embedding_initialization: *id221
+    shared_embedding_fraction: *id222
+    num_attn_blocks: *id223
+    attn_dropout: *id224
+    add_norm_dropout: *id225
+    ff_dropout: *id226
+    ff_hidden_multiplier: *id227
+    transformer_activation: *id228
+    embedding_dropout: *id229
+    optimizer_fn: *id230
+    scheduler_fn: *id231
+- dataset: creditcard
+  model: catboost
+  best_params: {}
+  param_grid:
+    outer_params: *id232
+    iterations: *id233
+    learning_rate: *id234
+    depth: *id235
+    colsample_bylevel: *id236
+    l2_leaf_reg: *id237
+    min_child_samples: *id238
+    bagging_temperature: *id239
