--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -15,7 +15,7 @@ include_models:
   #- GANDALF
   #- Node
   #- TabTransformer
-  #- AutoInt
+  - AutoInt
   ####- squeezenet
 
 # List of datasets to include in the experiment
