--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
 cachetools==5.3.1
+catboost==1.2.1
 category-encoders==2.6.1
 certifi==2023.7.22
 cffi==1.15.1
@@ -44,6 +45,7 @@ gitdb==4.0.10
 GitPython==3.1.32
 google-auth==2.22.0
 google-auth-oauthlib==1.0.0
+graphviz==0.20.1
 grpcio==1.56.2
 hyperopt==0.2.7
 idna==3.4
@@ -72,6 +74,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.8
 jupyterlab_server==2.24.0
 kiwisolver==1.4.4
+lightgbm==4.0.0
 lightning-utilities==0.9.0
 Markdown==3.4.4
 markdown-it-py==3.0.0
@@ -89,6 +92,10 @@ networkx==3.1
 notebook==7.0.2
 notebook_shim==0.2.3
 numpy==1.25.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
 oauthlib==3.2.2
 omegaconf==2.3.0
 overrides==7.4.0
@@ -102,6 +109,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
 platformdirs==3.10.0
+plotly==5.16.1
 prometheus-client==0.17.1
 prompt-toolkit==3.0.39
 protobuf==4.22.5
@@ -118,6 +126,7 @@ python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytorch-lightning==1.9.5
 pytorch-tabnet==4.0
+pytorch-tabular @ git+https://github.com/manujosephv/pytorch_tabular.git@20499a473056ff75474cda1d8a9d3ac7a105ed20
 pytz==2023.3
 PyYAML==6.0.1
 pyzmq==25.1.0
@@ -143,6 +152,7 @@ sniffio==1.3.0
 soupsieve==2.4.1
 stack-data==0.6.2
 statsmodels==0.14.0
+tenacity==8.2.3
 tensorboard==2.14.0
 tensorboard-data-server==0.7.1
 terminado==0.17.1
@@ -168,4 +178,3 @@ Werkzeug==2.3.6
 widgetsnbextension==4.0.8
 xgboost==1.7.6
 yarl==1.9.2
-git+https://github.com/manujosephv/pytorch_tabular.git
