--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -21,7 +21,7 @@ include_models:
 # List of datasets to include in the experiment
 include_datasets:
   #- creditcard  # Credit card fraud dataset
-  - iris        # Iris flower dataset
+  #- iris        # Iris flower dataset
   #- titanic
   #- bufix
   #- breastcancer 
