--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -8,9 +8,9 @@ include_models:
   #- MLP  # Multi-Layer Perceptron
   #- TabNet  # TabNet Classifier 
   #- GATE 
-  - resnet18
-  #- S1DCNN
-  - CategoryEmbedding
+  #- resnet18
+  - S1DCNN
+  #- CategoryEmbedding
   #- FTTransformer
   #- GANDALF
   #- Node
