--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -3,33 +3,36 @@ retrain: True
 # List of models to include in the experiment
 include_models:
   #- XGB  # Extreme Gradient Boosting
-  #- CatBoost
-  ####- LightGBM
+  - CatBoost
+
   #- MLP  # Multi-Layer Perceptron
-  #- TabNet  # TabNet Classifier 
-  #- GATE 
-  #- resnet18
+  - TabNet  # TabNet Classifier 
+  - GATE 
+  - resnet18
   - S1DCNN
-  #- CategoryEmbedding
-  #- FTTransformer
-  #- GANDALF
-  #- Node
-  #- TabTransformer
-  #- AutoInt
+  - CategoryEmbedding
+  - FTTransformer
+  - GANDALF
+  - Node
+  - TabTransformer
+  - AutoInt
   ####- squeezenet
+  ####- LightGBM
 
 # List of datasets to include in the experiment
 include_datasets:
-  #- creditcard  # Credit card fraud dataset
+  - creditcard  # Credit card fraud dataset
+  - heloc
+  - covertype
+  - adult
+  - housing
   #- iris        # Iris flower dataset
   #- titanic
   #- bufix
-  #- breastcancer 
-  - housing
+  #- breastcancer
   #- ageconditions
-  #- adult
-  #- heloc
-  #- covertype
+  
+  
 
 model_configs:
 
