--- a/configuration/experiment_config.yml
+++ b/configuration/experiment_config.yml
@@ -6,16 +6,16 @@ include_models:
   #- CatBoost
 
   #- MLP  # Multi-Layer Perceptron
-  - TabNet  # TabNet Classifier 
+  #- TabNet  # TabNet Classifier 
   #- GATE 
   #- resnet18
-  - S1DCNN
-  - CategoryEmbedding
-  - FTTransformer
-  - GANDALF
-  #- Node
-  - TabTransformer
-  - AutoInt
+  #- S1DCNN
+  #- CategoryEmbedding
+  #- FTTransformer
+  #- GANDALF
+  - Node
+  #- TabTransformer
+  #- AutoInt
   ####- squeezenet
   ####- LightGBM
 
@@ -23,9 +23,9 @@ include_models:
 include_datasets:
   #- creditcard  # Credit card fraud dataset
   #- heloc
-  - covertype
+  #- covertype
   #- adult
-  #- housing
+  - housing
   #- iris        # Iris flower dataset
   #- titanic
   #- bufix
